# learn_mise_en_place-project

./: README.md  README.rst  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements-all.txt  requirements.txt  test.py
learn_mise_en_place/: __init__.py  paths.py
learn_mise_en_place/tests/: __init__.py
tests/: all.py  test_utils.py
